(fix) navbar links  on mobile were display next to each other not under each other

--- a/public/stylesheets/root/style.css
+++ b/public/stylesheets/root/style.css
@@ -375,6 +375,7 @@ footer a {
 
     .nav-links ul li {
         display: block;
+        margin-bottom: 10px;
     }
 
     .nav-links {
@@ -418,6 +419,7 @@ footer a {
     .nav-links ul {
         padding: 20px;
         color: black;
+        flex-direction: column;
 
     }
 
